Fix esym calculation to match comments.  Reported by Gao Ya'nan in PR port-i386/38170.